--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                   <div class="flex-container">
 
 
-                  <ul class"footer-links">
+                  <ul class= "footer-links">
                     <li>
                       <img src="http://placehold.it/10x15" alt="phone-icon" class="f-phone-icon"> <p class="foot-banner-info">(04) 586 0200</p>
                     </li>
